--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   configure-server:
     docker: 
-      - image: cimg/base:2021.04
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
       - add_ssh_keys:
@@ -10,8 +10,7 @@ jobs:
       - run:
           name: install ansible
           command: |
-            sudo apt update
-            sudo apt install ansible
+            apk add --update ansible 
       - run:
           name: run ansible
           command: |
