--- a/roles/node-test/tasks/main.yml
+++ b/roles/node-test/tasks/main.yml
@@ -10,17 +10,17 @@
     upgrade: yes
 
 
-# - name: remove dependencies that are no longer required
-#   become: yes
-#   apt:
-#     autoremove: yes
+- name: remove dependencies that are no longer required
+  become: yes
+  apt:
+    autoremove: yes
 
-# - name: "install dependencies."
-#   become: yes
-#   apt:
-#     name: ["nodejs", "npm"]
-#     state: latest
-#     update_cache: yes
+- name: "install dependencies."
+  become: yes
+  apt:
+    name: ["nodejs", "npm"]
+    state: latest
+    update_cache: yes
 
 - name: "install pm2"
   become: yes
